syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.usactar";
option java_outer_classname = "usactarProto";
option objc_class_prefix = "HLW";

package usactar;

service GrpcConnection {
  rpc AddPrediction (PredictionRequest) returns (PredictionReply) {}
}

message PredictionRequest {
  string team1 = 1;
  string team2 = 2;
  string score = 3;
  int32 phase = 4;
}

message PredictionReply {
  string message = 1;
}